--- a/src/index.html
+++ b/src/index.html
@@ -16,19 +16,16 @@
   </head>
   <body class="page__body">
     <header class="header page__section">
-
       <div class="container">
-
         <div class="header__background-mobile"></div>
-
-        <nav class="header__nav">
-          <a href="#" class="header__menu-opener"></a>
+        <nav class="top-actions">
+          <a href="#menu" class="icon icon--menu"></a>
           <a href="#" class="logo">
             NA
             <br>
             MU
           </a>
-          <div class="header__third-element"></div>
+          <div class="icon icon--third-element"></div>
         </nav>
 
         <div class="header__content">
@@ -53,6 +50,10 @@
               </div>
             </div>
 
+            <div class="header__action">
+              <div class="header__action-line"></div>
+              <span class="header__action-text">Події</span>
+            </div>
 
             <div class="header__background-tablet"></div>
           </div>
@@ -60,16 +61,108 @@
 
 
 
-
       </div>
     </header>
 
-    <nav class="menu">
+    <nav class="page__menu menu" id="menu">
       <div class="container">
         <div class="menu__content">
+          <div class="top-actions">
+            <a href="#" class="icon icon--cross"></a>
+            <a href="#" class="logo">
+              NA
+              <br>
+              MU
+            </a>
+            <div class="icon icon--third-element"></div>
+          </div>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Home</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#about-us" class="menu__link">About us</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Gallery</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#testimonials" class="menu__link">Testimonial</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#contact-us" class="menu__link">Contact us</a>
+            </li>
+          </ul>
+
+          <a
+            href="tel:+1 234 555-55-55"
+            class="menu__call menu__call--phone">
+            +1 234 555-55-55
+          </a>
+
+          <a
+            href="tel:+1 234 555-55-55"
+            class="menu__call  menu__call--action">
+            call to order
+          </a>
         </div>
       </div>
     </nav>
+
+    <main>
+      <section class="events page__section" id="events">
+        <div class="container">
+          <h2 class="page__section-title">
+            Актуальні події
+          </h2>
+
+          <div class="event events__event">
+            <div class="event__photo">
+              <div class="grid">
+                <div class="grid__item">
+                  <div class="event__photo-container">
+                    <img
+                      src="./images/2.png"
+                      alt="Event 1"
+                      class="event__photo"
+                    >
+                  </div>
+                </div>
+
+                <div class="grid__item">
+                  <div class="event__details">
+                    <div class="event__value">
+                      <div class="event__meaning">ВИСТАВКА</div>
+                      <div class="event__date">26.08-29.11.2019</div>
+                    </div>
+                    <div class="event__name">Йду і повертаюсь
+                    </div>
+                    <div class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section">
+        <div class="container">
+          <h2 class="page__section-title">Галерея</h2>
+        </div>
+      </section>
+
+      <section class="page__section">
+        <div class="container">
+          <h2 class="page__section-title">Підписка</h2>
+        </div>
+      </section>
+    </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
