--- a/src/index.html
+++ b/src/index.html
@@ -194,5 +194,95 @@
         </div>
       </section>
     </main>
+
+    <footer class="page__footer">
+      <div class="container">
+        <div class="grid">
+          <div class="grid__item grid__item--1-2 grid__item--tablet-1-1">
+            <div class="footer__icons">
+              <a href="#" class="footer__logo-namu">
+                <img src="./images/NA MU.svg" alt="NAMU logo">
+              </a>
+
+              <div class="footer__logos-soc">
+                <a href="https://www.facebook.com/namu.museum/" target="blank">
+                  <img src="./images/Facebook.svg" alt="Facebook logo">
+                </a>
+
+                <a href="https://www.instagram.com/namu.museum/" target="blank">
+                  <img src="./images/Insta.svg" alt="Instagram logo">
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
+            <h4 class="footer__subtitle">
+              Графік роботи
+            </h4>
+
+            <div class="footer__content">
+              <span class="footer__content--strong">12:00 — 20:00</span>
+              середа
+              <br>
+              <span class="footer__content--strong">12:00 — 20:00</span>
+              четвер
+              <br>
+              <span class="footer__content--strong">12:00 — 20:00</span>
+              п'ятниця
+              <br>
+              <span class="footer__content--strong">11:00 — 19:00</span>
+              субота
+              <br>
+              <span class="footer__content--strong">11:00 — 19:00</span>
+              неділя
+            </div>
+
+            <div class="footer__content">
+              <span class="footer__content--strong">Вихідні:</span> понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-5-6">
+            <h4 class="footer__subtitle">
+              Контакти
+            </h4>
+
+            <div class="footer__content">
+              <a
+                href="https://goo.gl/maps/oJ2FAmWd3envvXzZA"
+                class="footer__contact"
+                target="blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+
+              <a
+                href="tel:+38 (044) 278-13-57"
+                class="footer__contact"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+
+              <a
+                href=""
+                class="footer__contact"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+
+              <a
+                href=""
+                class="footer__contact"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
