--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link
       rel="favicon"
       type="image/svg"
-      href="images/NA MU.svg"
+      href="images/logo-true.svg"
     >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <header class="header page__section">
+    <header class="header page__header">
       <div class="container">
         <div class="header__background-mobile"></div>
         <nav class="top-actions">
@@ -122,36 +122,84 @@
           </h2>
 
           <div class="event events__event">
-            <div class="event__photo">
-              <div class="grid">
-                <div class="grid__item">
-                  <div class="event__photo-container">
-                    <img
-                      src="./images/2.png"
-                      alt="Event 1"
-                      class="event__photo"
-                    >
-                  </div>
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item--1-7">
+                <div class="event__photo-container">
+                  <img
+                    src="./images/2.png"
+                    alt="Event 1"
+                    class="event__photo"
+                  >
                 </div>
+              </div>
 
-                <div class="grid__item">
-                  <div class="event__details">
-                    <div class="event__value">
-                      <div class="event__meaning">ВИСТАВКА</div>
-                      <div class="event__date">26.08-29.11.2019</div>
-                    </div>
-                    <div class="event__name">Йду і повертаюсь
-                    </div>
-                    <div class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+              <div class="grid__item grid__item--9-12">
+                <div class="event__details">
+                  <div class="event__value">
+                    <div class="event__meaning">ВИСТАВКА</div>
+                    <div class="event__date">26.08-29.11.2019</div>
+                  </div>
+                  <h3 class="event__name">Йду і повертаюсь
+                  </h3>
+                  <div class="event__description">
+                    Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
                   </div>
                 </div>
               </div>
             </div>
           </div>
+
+          <div class="event events__event">
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item--6-12 grid__item--second">
+                <div class="event__photo-container">
+                  <img
+                    src="./images/3.png"
+                    alt="Event 2"
+                    class="event__photo"
+                  >
+                </div>
+              </div>
+
+              <div class="grid__item grid__item--1-4 grid__item--first">
+                <div class="event__details">
+                  <div class="event__value">
+                    <div class="event__meaning">ВИСТАВКА</div>
+                    <div class="event__date">26.08-29.11.2019</div>
+                  </div>
+                  <h3 class="event__name">І спогади і мрії
+                  </h3>
+                  <div class="event__description">
+                    Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="event events__event event--3">
+            <div class="event__photo-container">
+              <img
+                src="./images/4.png"
+                alt="Event 3"
+                class="event__photo event__photo--3"
+              >
+            </div>
+
+            <div class="event__details event__details--3">
+              <div class="event__value">
+                <div class="event__meaning">ЛЕКЦІЯ</div>
+                <div class="event__date">26/08/2019 - 11:00</div>
+              </div>
+              <h3 class="event__name">Від класицизму до романтизму
+              </h3>
+            </div>
+
+          </div>
         </div>
       </section>
 
-      <section class="page__section">
+      <section class="gallery page__section">
         <div class="container">
           <h2 class="page__section-title">Галерея</h2>
         </div>
