--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,281 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin=""
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/namuLogo.png">
+  </head>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__nav">
+        <a href="#menu" class="header__menu-opener"></a>
+
+        <a href="#" class="logo">
+          <img
+            class="logo__img"
+            src="images/namuLogo.png"
+            alt="namu">
+        </a>
+
+        <div></div>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="menu__header">
+        <a href="#" class="menu__header-cross">X</a>
+
+        <a href="#" class="logo">
+          <img
+          class="logo__img"
+          src="images/namuLogo.png"
+          alt="namu logo">
+        </a>
+
+        <div></div>
+      </div>
+
+      <ul class="menu__list">
+        <li class="menu__item">
+          <a href="#" class="menu__link">
+            ХУДОЖНІЙ МУЗЕЙ
+          </a>
+        </li>
+
+        <li class="menu__item">
+          <a href="#" class="menu__link">
+            Актуальні події
+          </a>
+
+          <ul class="menu__list">
+            <li class="menu__sub-item">
+              <a href="#" class="menu__link">
+                Йду і повертаюсь
+              </a>
+            </li>
+            <li class="menu__sub-item">
+              <a href="#" class="menu__link">
+                І спогади і мрії
+              </a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="menu__item">
+          <a href="#" class="menu__link">
+            Від класицизму
+            <br>
+            до романтизму
+          </a>
+        </li>
+
+        <li class="menu__item">
+          <a href="#" class="menu__link">
+            Галерея
+          </a>
+        </li>
+
+        <li class="menu__item">
+          <a href="#" class="menu__link">
+            Підписка
+          </a>
+        </li>
+
+        <li class="menu__item">
+          <a href="#" class="menu__link">
+            Контакти
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+    <main>
+      <section class="page__section">
+        <h1 class="page__section-title h1">
+          ХУДОЖНІЙ МУЗЕЙ
+        </h1>
+
+        <a href="#" class="ticket">
+          <div class="ticket__title">КВИТКИ</div>
+          <div class="ticket__square">></div>
+        </a>
+      </section>
+
+      <section class="page__section">
+        <h2 class="page__section-title h2">
+          Актуальні
+          <br>
+          події
+        </h2>
+
+        <div class="img-mob img-mob__1"></div>
+
+        <div class="action-date">
+          <div class="action-date__title">
+            ВИСТАВКА
+          </div>
+          <div class="action-date__time">
+            26.08-29.11.2019
+          </div>
+        </div>
+
+        <h3 class="page__section-subtitle">
+          <div>
+            Йду і повертаюсь
+          </div>
+          <div class="red-square"></div>
+        </h3>
+
+        <p class="page__section-text">
+          Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+        </p>
+
+        <div class="img-mob img-mob__2"></div>
+
+        <div class="action-date">
+          <div class="action-date__title">
+            ВИСТАВКА
+          </div>
+          <div class="action-date__time">
+            26.08-29.11.2019
+          </div>
+        </div>
+
+        <h3 class="page__section-subtitle">
+          <div>
+            І спогади і мрії
+          </div>
+          <div class="red-square"></div>
+        </h3>
+
+        <p class="page__section-text">
+          Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+        </p>
+      </section>
+
+      <section class="page__section page__section-special-margin">
+        <div class="img-mob img-mob__3"></div>
+        <div class="toUp">
+          <div class="fromTo">
+            <div class="fromTo__date">
+              <div class="action-date__title">
+                ЛЕКЦІЯ
+              </div>
+              <div class="action-date__time">
+                26/08/2019 - 11:00
+              </div>
+            </div>
+            <h3 class="page__section-title--w400">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section">
+        <h1 class="page__section-title">
+          Галерея
+        </h1>
+
+        <div class="img-mob img-mob__4"></div>
+        <div class="slider">
+          <div class="slider__1"></div>
+          <div class="slider__2"></div>
+          <div class="slider__3"></div>
+          <div class="slider__4"></div>
+        </div>
+      </section>
+
+      <section class="page__section">
+        <div class="subscribe">
+          <h2 class="subscribe__title">
+            Підписка
+          </h2>
+
+          <p class="subscribe__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form action="" class="subscribe__form">
+            <input
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              class="subscribe__form-email"
+            >
+            <button class="subscribe__form-button" type="submit">></button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__header">
+        <a
+          href="#"
+          class="footer__logo link">
+          <img src="./images/namuLogo.png"  alt="logo">
+        </a>
+
+        <div class="footer__icons">
+          <a href="#" class="link">
+            <img src="./images/fbLogo.png" alt="facebook">
+          </a>
+
+          <a href="#" class="link">
+            <img
+              src="./images/inst.png"
+              alt="instagram"
+              class="instagram-link"
+            >
+          </a>
+        </div>
+      </div>
+
+      <div class="contacts-us">
+        <p class="contacts-us__work-time">
+          Графік роботи:
+          <br>
+          <br>
+          12:00 — 20:00 середа
+          <br>
+          12:00 — 20:00 четвер
+          <br>
+          12:00 — 20:00 п’ятниця
+          <br>
+          11:00 — 19:00 субота
+          <br>
+          11:00 — 19:00 неділя
+          <br>
+          <br>
+          Вихідні понеділок, вівторок.
+          <br>
+          Каса припиняє роботу за 1 годину до закриття музею.
+        </p>
+
+        <p class="contacts-us__contacts">
+          Контакти:
+          <br>
+          <br>
+          вул. М. Грушевського, 6; Київ, 01001
+          <br>
+          тел. +38 (044) 278-13-57
+          <br>
+          факс +38 (044) 278-74-54
+          <br>
+          e-mail: info@namu.kiev.ua
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
