--- a/src/index.html
+++ b/src/index.html
@@ -274,10 +274,121 @@
       </section>
 
       <section class="contacts main__contacts" id="contacts">
-        contacts
+        <div class="contacts__media grid__item--onLaptop-1-1">
+          <div class="contacts__logo">
+            <a href="#home" class="logo link">
+              NA
+              <br>
+              MA
+            </a>
+          </div>
+
+          <div class="contacts__media-container">
+            <a
+              href="https://www.facebook.com/namu.museum/"
+              class="contacts__facebook link"
+              target="blank"
+            >
+              <img src="./images/facebook.svg" alt="facebook">
+            </a>
+
+            <a
+              href="https://www.instagram.com/namu.museum/"
+              class="contacts__intagram link"
+              target="blank"
+            >
+              <img src="./images/instagram.svg" alt="instagram">
+            </a>
+          </div>
+        </div>
+
+        <div class="contacts__work-time">
+          <h2 class="contacts__title">Графік роботи</h2>
+
+          <p class="contacts__time">
+            <span class="contacts__time-bold">12:00 — 20:00</span>
+            середа
+            <br>
+            <span class="contacts__time-bold">12:00 — 20:00</span>
+            четвер
+            <br>
+            <span class="contacts__time-bold">12:00 — 20:00</span>
+            п’ятниця
+            <br>
+            <span class="contacts__time-bold">11:00 — 19:00</span>
+            субота
+            <br>
+            <span class="contacts__time-bold">11:00 — 19:00</span>
+            неділя
+            <br>
+            <br>
+            Вихідні понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+
+        <div class="contacts__contact">
+          <h2 class="contacts__title">Контакти:</h2>
+
+          <a
+            href="https://goo.gl/maps/wjN7SNwFhuT48XHH9"
+            class="contacts__link link"
+            target="blank"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <a href="tel:+380442781357" class="contacts__link link">
+            тел. +38 (044) 278-13-57
+          </a>
+          <a href="tel:+380442787454" class="contacts__link link">
+            факс +38 (044) 278-74-54
+          </a>
+          <a href="mailto:info@namu.kiev.ua" class="contacts__link link">
+            e-mail: info@namu.kiev.ua
+          </a>
+        </div>
+
+        <a href="#home" class="scroll-up contacts__scroll-up link">
+          <img
+            src="./images/arrow.svg"
+            alt="arrow"
+            class="scroll-up__img"
+          >
+        </a>
+
+        <div class="contacts__line">
+        </div>
+
+        <nav class="contacts__nav">
+          <div class="contacts__nav-block">
+            <a href="#gallery" class="contacts__link link">
+              Галерея
+            </a>
+
+            <a href="#actual-events" class="contacts__link link">
+              Виставки та події
+            </a>
+          </div>
+          <div class="contacts__nav-block">
+            <a href="#home" class="contacts__link link">
+              Про Нас
+            </a>
+
+            <a href="#contacts" class="contacts__link link">
+              Контакти
+            </a>
+          </div>
+        </nav>
       </section>
-      <footer>
-        footer
+
+      <footer class="footer">
+        <span class="footer__design">
+          Designed by Zhyriada Marina
+        </span>
+        <span class="footer__copi">
+          Copyright © 2019. All Rights Reserved.
+        </span>
       </footer>
     </main>
   </body>
