--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,11 @@
           </span>
         </a>
       </div>
+      <div  class="header__events">
+        <a href="#current-events" class="header__events-text">
+          ПОДІЇ
+        </a>
+      </div>
     </header>
 
     <nav class="page__menu menu" id="menu">
@@ -68,122 +73,141 @@
       </div>
     </nav>
 
-    <section class="museum">
-      <h1 class="museum__title">
-        ХУДОЖ<span class="museum__span">НІЙ</span>
-        <br>
-        МУЗЕЙ
-      </h1>
-      <div class="museum__button">
-        <div class="museum__button-link">КВИТКИ</div>
-        <div class="museum__button-arrow">
-          <img src="/images/arrow.svg" alt=">">
-        </div>
-      </div>
-    </section>
-
-    <section class="current-events" id="current-events">
-      <h2 class="current-events__title">
-        Актуальні події
-      </h2>
-
-      <div class="events grid">
-        <img
-          class="events__img grid__item--onDesktop-1-7"
-          src="/images/events1.jpg"
-          alt="events1"
-        >
-        <div class="wraper grid__item--onDesktop-9-12">
-          <div class="events__block">
-            <span class="events__block-type">ВИСТАВКА</span>
-            <span class="events__block-data">26.08-29.11.2019</span>
+    <main>
+      <section class="museum">
+        <h1 class="museum__title">
+          ХУДОЖ<span class="museum__span">НІЙ</span>
+          <br>
+          МУЗЕЙ
+        </h1>
+        <div class="museum__button">
+          <div class="museum__button-link">КВИТКИ</div>
+          <div class="museum__button-arrow">
+            <img src="/images/arrow.svg" alt=">">
           </div>
-          <h3 class="events__title">
-            Йду і повертаюсь
-          </h3>
-          <p class="events__text">
-            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-          </p>
         </div>
-      </div>
+      </section>
 
-      <div class="events grid grid--revers">
-        <img
-          class="events__img grid__item--onDesktop-1-7"
-          src="/images/events2.jpg"
-          alt="events1"
-        >
-        <div class="wraper grid__item--onDesktop-9-12">
-          <div class="events__block">
-            <span class="events__block-type">ВИСТАВКА</span>
-            <span class="events__block-data">26.08-29.11.2019</span>
+      <section class="current-events" id="current-events">
+        <h2 class="current-events__title">
+          Актуальні події
+        </h2>
+
+        <div class="events grid">
+          <img
+            class="events__img grid__item--onDesktop-1-7"
+            src="/images/events1.jpg"
+            alt="events1"
+          >
+          <div class="wraper grid__item--onDesktop-9-12">
+            <div class="events__block">
+              <span class="events__block-type">ВИСТАВКА</span>
+              <span class="events__block-data">26.08-29.11.2019</span>
+            </div>
+            <h3 class="events__title">
+              Йду і повертаюсь
+            </h3>
+            <p class="events__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
           </div>
-          <h3 class="events__title">
-            І спогади і мрії
+        </div>
+
+        <div class="events grid grid--revers">
+          <img
+            class="events__img grid__item--onDesktop-1-7"
+            src="/images/events2.jpg"
+            alt="events1"
+          >
+          <div class="wraper grid__item--onDesktop-9-12">
+            <div class="events__block">
+              <span class="events__block-type">ВИСТАВКА</span>
+              <span class="events__block-data">26.08-29.11.2019</span>
+            </div>
+            <h3 class="events__title">
+              І спогади і мрії
+            </h3>
+            <p class="events__text">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="classicism page__classicism" id="classicism">
+        <img
+          src="/images/classicism.png"
+          alt="classicism"
+          class="classicism__img"
+        >
+        <div class="classicism__action">
+          <div class="classicism__event-block">
+            <span class="classicism__lecture">
+              ЛЕКЦІЯ
+            </span>
+            <span class="classicism__data">
+              26/08/2019 - 11:00
+            </span>
+          </div>
+          <h3 class="classicism__title">
+            Від класицизму до романтизму
           </h3>
-          <p class="events__text">
-            Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-          </p>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="classicism page__classicism" id="classicism">
-      <img
-        src="/images/classicism.png"
-        alt="classicism"
-        class="classicism__img"
-      >
-      <div class="classicism__action">
-        <div class="classicism__event-block">
-          <span class="classicism__lecture">
-            ЛЕКЦІЯ
-          </span>
-          <span class="classicism__data">
-            26/08/2019 - 11:00
-          </span>
+      <section class="gallery page__gallery" id="gallery">
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__content">
+          <img
+            src="./images/gallery1.png"
+            alt="gallery image"
+            class="gallery__img"
+          >
+          <img
+            src="./images/gallery2.jpg"
+            alt="gallery image"
+            class="gallery__img gallery__hidden"
+          >
+          <img
+           src="./images/gallery3.png"
+           alt="gallery image"
+           class="gallery__img"
+          >
+          <img
+            src="./images/gallery4.png"
+            alt="gallery image"
+            class="gallery__img"
+          >
+          <img
+            src="./images/gallery5.png"
+            alt="gallery image"
+            class="gallery__img"
+          >
         </div>
-        <h3 class="classicism__title">
-          Від класицизму до романтизму
-        </h3>
-      </div>
-    </section>
+        <div class="gallery__toggle">
+          <div class="gallery__toggle--point active"></div>
+          <div class="gallery__toggle--point"></div>
+          <div class="gallery__toggle--point"></div>
+          <div class="gallery__toggle--point"></div>
+        </div>
+      </section>
 
-    <section class="gallery page__gallery" id="gallery">
-      <h2 class="gallery__title">Галерея</h2>
-      <div class="gallery__content">
-        <img
-          src="./images/gallery1.png"
-          alt="gallery image"
-          class="gallery__img"
-        >
-        <img
-          src="./images/gallery2.jpg"
-          alt="gallery image"
-          class="gallery__img gallery__hidden"
-        >
-        <img
-         src="./images/gallery3.png"
-         alt="gallery image"
-         class="gallery__img"
-        >
-        <img
-          src="./images/gallery4.png"
-          alt="gallery image"
-          class="gallery__img"
-        >
-        <img
-          src="./images/gallery5.png"
-          alt="gallery image"
-          class="gallery__img"
-        >
-      </div>
-      <div class="gallery__toggle">
-        <div class="gallery__toggle--point active"></div>
-        <div class="gallery__toggle--point"></div>
-        <div class="gallery__toggle--point"></div>
-        <div class="gallery__toggle--point"></div>
-      </div>
-    </section>
+      <section class="subscribe page__subscribe" id="subscribe">
+        <h3 class="subscribe__title">Підписка</h3>
+        <h2 class="subscribe__sub-title">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </h2>
+        <form action="get" class="subscribe__form">
+          <input
+            type="email"
+            class="subscribe__input"
+            placeholder="E-mail"
+          >
+          <div class="subscribe__input-arrow">
+            <img src="/images/arrow-input.svg" alt=">">
+          </div>
+        </form>
+      </section>
+    </main>
   </body>
 </html>
